Prevent butterbar from being hidden behind the dashboard header.
It should look exactly the same on all non-dashboard pages.
	Change on 2015/07/27 by nretallack <nretallack@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=99229216

--- a/coursebuilder/modules/dashboard/resources/css/view.css
+++ b/coursebuilder/modules/dashboard/resources/css/view.css
@@ -627,6 +627,10 @@ Minimal Example:
   color: inherit;
 }
 
+.mdl-layout__header {
+  position: relative;
+}
+
 .mdl-layout__drawer .mdl-layout-title {
   padding-left: 30px;
   border-bottom: 1px solid #e0e0e0;
