--- a/coursebuilder/modules/oeditor/resources/butterbar.css
+++ b/coursebuilder/modules/oeditor/resources/butterbar.css
@@ -3,12 +3,15 @@
   text-align: center;
   width: 100%;
   left: 0px;
+  color: black;
   z-index: 999;
   visibility: hidden;
 }
+
 .gcb-butterbar-container.fixed {
   position: fixed;
 }
+
 .gcb-butterbar {
   text-align: center;
   padding: 0 16px;
@@ -25,9 +28,12 @@
   opacity: 0;
   left: -1000%;
 }
+
 .gcb-butterbar-dashboard {
-  margin-top: 5px;
+  position: absolute;
+  top: 75px;
 }
+
 .gcb-butterbar.shown {
   opacity: 1;
   visibility: visible;
